--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 API_PORT=4001
 
-MONGO_URI= //Your database URI here
+MONGO_URI= enter mongo uri
+
+HASH_SALT = set the number
+
+TOKEN_KEY = 123fsdfghgf
