Fix vs endround race condition

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 API_PORT=4001
 
-MONGO_URI= enter mongo uri
+MONGO_URI= mongodb+srv://iq180netcentric:netcentric_180_iq@iq180.nip4p.mongodb.net/Iq180?retryWrites=true&w=majority
 
-HASH_SALT = set the number
+HASH_SALT = 10
 
 TOKEN_KEY = 123fsdfghgf
